--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
+<!DOCTYPE html>
 <html>
-
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type=text/css>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 </head>
-
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
@@ -45,5 +44,4 @@
   </div>
   <script type="text/javascript" SRC="app.js"></script>
 </body>
-
 </html>
