refactor: remove tag in CSS according to rule 3.4 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <p class="main__add_section">
       <label class="main__label" for="new-task">Add Item</label>
       <div class="task__wrapper">
-        <input class="task__input" id="new-task" type="text">
+        <input class="task__input input-text" id="new-task" type="text">
         <button class="button button_add">Add</button>
       </div>
     </p>
     <h3 class="section__header">Todo</h3>
     <ul class="section__list incomplete-list">
       <li class="list">
-        <input class="task__input" type="checkbox">
+        <input class="task__input input-checkbox" type="checkbox">
         <label class="task__item">Pay Bills</label>
-        <input class="task__input" type="text">
+        <input class="task__input input-text" type="text">
         <button class="button button_edit">Edit</button>
         <button class="button button_delete">
           <img class="button__img" src="./remove.svg">
         </button>
       </li>
       <li class="list edit-mode">
-        <input class="task__input" type="checkbox">
+        <input class="task__input input-checkbox" type="checkbox">
         <label class="task__item">Go Shopping</label>
-        <input class="task__input" type="text" value="Go Shopping" >
+        <input class="task__input input-text" type="text" value="Go Shopping" >
         <button class="button button_edit">Save</button>
         <button class="button button_delete">
           <img class="button__img" src="./remove.svg">
@@ -42,10 +42,10 @@
     </ul>
     <h3 class="section__header">Completed</h3>
     <ul class="section__list complete-list">
-      <li>
-        <input class="task__input" type="checkbox" checked>
+      <li class="list">
+        <input class="task__input input-checkbox" type="checkbox" checked>
         <label class="task__item">See the Doctor</label>
-        <input class="task__input" type="text">
+        <input class="input-text" type="text">
         <button class="button button_edit">Edit</button>
         <button class="button button_delete">
           <img class="button__img" src="./remove.svg">
