--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Todo App</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
-</head>
-<body class="body">
-  <div class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
-    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  
-  <div class="main">
-    <p class="main__add_section">
-      <label class="main__label" for="new-task">Add Item</label>
-      <div class="task__wrapper">
-        <input class="task__input input-text" id="new-task" type="text">
-        <button class="button button_add">Add</button>
-      </div>
-    </p>
-    <h3 class="section__header">Todo</h3>
-    <ul class="section__list incomplete-list">
-      <li class="list">
-        <input class="task__input input-checkbox" type="checkbox">
-        <label class="task__item">Pay Bills</label>
-        <input class="task__input input-text" type="text">
-        <button class="button button_edit">Edit</button>
-        <button class="button button_delete">
-          <img class="button__img" src="./remove.svg">
-        </button>
-      </li>
-      <li class="list edit-mode">
-        <input class="task__input input-checkbox" type="checkbox">
-        <label class="task__item">Go Shopping</label>
-        <input class="task__input input-text" type="text" value="Go Shopping" >
-        <button class="button button_edit">Save</button>
-        <button class="button button_delete">
-          <img class="button__img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3 class="section__header">Completed</h3>
-    <ul class="section__list complete-list">
-      <li class="list">
-        <input class="task__input input-checkbox" type="checkbox" checked>
-        <label class="task__item">See the Doctor</label>
-        <input class="input-text" type="text">
-        <button class="button button_edit">Edit</button>
-        <button class="button button_delete">
-          <img class="button__img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-  </div>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <title>Todo App</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  </head>
+  <body class="body">
+    <header class="header">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
+    <main class="main">
+      <section class="main__add_section">
+        <label class="main__label" for="new-task">Add Item</label>
+        <div class="task__wrapper">
+          <input class="task__input input-text" id="new-task" type="text">
+          <button class="button button_add">Add</button>
+        </div>
+      </section>
+      <section class="incomplete-tasks">
+        <h3 class="section__header">Todo</h3>
+        <ul class="section__list incomplete-list">
+          <li class="list">
+            <input class="task__input input-checkbox" type="checkbox">
+            <label class="task__item">Pay Bills</label>
+            <input class="task__input input-text" type="text">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img class="button__img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="list edit-mode">
+            <input class="task__input input-checkbox" type="checkbox">
+            <label class="task__item">Go Shopping</label>
+            <input class="task__input input-text" type="text" value="Go Shopping">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete">
+              <img class="button__img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="complete-tasks">
+        <h3 class="section__header">Completed</h3>
+        <ul class="section__list complete-list">
+          <li class="list">
+            <input class="task__input input-checkbox" type="checkbox" checked>
+            <label class="task__item">See the Doctor</label>
+            <input class="input-text" type="text">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img class="button__img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <script src="app.js"></script>
+  </body>
 </html>
