--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix image">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -27,7 +27,7 @@
             <input class="task__input input-text" type="text">
             <button class="button button_edit">Edit</button>
             <button class="button button_delete">
-              <img class="button__img" src="./remove.svg">
+              <img class="button__img" src="./remove.svg" alt="button delete image">
             </button>
           </li>
           <li class="list edit-mode">
@@ -36,7 +36,7 @@
             <input class="task__input input-text" type="text" value="Go Shopping">
             <button class="button button_edit">Save</button>
             <button class="button button_delete">
-              <img class="button__img" src="./remove.svg">
+              <img class="button__img" src="./remove.svg" alt="button delete image">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input class="input-text" type="text">
             <button class="button button_edit">Edit</button>
             <button class="button button_delete">
-              <img class="button__img" src="./remove.svg">
+              <img class="button__img" src="./remove.svg" alt="button delete image">
             </button>
           </li>
         </ul>
