refactor: rename classes (BEM) according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="incomplete-tasks">
         <h3 class="section__header">Todo</h3>
         <ul class="section__list incomplete-list">
-          <li class="list">
+          <li class="list__item">
             <input class="task__input input-checkbox" type="checkbox">
             <label class="task__item">Pay Bills</label>
             <input class="task__input input-text" type="text">
@@ -30,7 +30,7 @@
               <img class="button__img" src="./remove.svg" alt="button delete image">
             </button>
           </li>
-          <li class="list edit-mode">
+          <li class="list__item edit-mode">
             <input class="task__input input-checkbox" type="checkbox">
             <label class="task__item">Go Shopping</label>
             <input class="task__input input-text" type="text" value="Go Shopping">
@@ -44,7 +44,7 @@
       <section class="complete-tasks">
         <h3 class="section__header">Completed</h3>
         <ul class="section__list complete-list">
-          <li class="list">
+          <li class="list__item">
             <input class="task__input input-checkbox" type="checkbox" checked>
             <label class="task__item">See the Doctor</label>
             <input class="input-text" type="text">
