fix: restor of working TODO (fix js code)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <button class="button button_add">Add</button>
         </div>
       </section>
-      <section class="incomplete-tasks">
+      <section class="incompleted-tasks">
         <h3 class="section__header">Todo</h3>
-        <ul class="section__list incomplete-list">
+        <ul class="section__list incompleted-list">
           <li class="list__item">
             <input class="task__input input-checkbox" type="checkbox">
             <label class="task__item">Pay Bills</label>
@@ -41,9 +41,9 @@
           </li>
         </ul>
       </section>
-      <section class="complete-tasks">
+      <section class="completed-tasks">
         <h3 class="section__header">Completed</h3>
-        <ul class="section__list complete-list">
+        <ul class="section__list completed-list">
           <li class="list__item">
             <input class="task__input input-checkbox" type="checkbox" checked>
             <label class="task__item">See the Doctor</label>
